// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example composer (end-to-end) honors customClientName param 1`] = `
"import time
from client import MyEchoClient

def handle_handle_time_stamp_message(message):
    print(f\\"[handleTimeStampMessage] Received message: {message}\\")

def custom_error_handler(error):
    print(f\\"WebSocket error: {error}\\")

def outgoing_message_processor(message):
    \\"\\"\\"Process outgoing messages before they are sent (e.g., wrap with metadata).\\"\\"\\"
    print(f\\"Outgoing processor fired: {message}\\")
    return {\\"payload\\": message, \\"timestamp\\": \\"2025-01-01T00:00:00Z\\"}

def main():
    client = MyEchoClient()
    client.register_handle_time_stamp_message_handler(handle_handle_time_stamp_message)
    client.register_error_handler(custom_error_handler)
    client.register_outgoing_processor(outgoing_message_processor)

    try:
        client.connect()
        for i in range(5):
            try:
                client.send_echo_message('test')
            except Exception as e:
                print(f\\"Error while sending send_echo_message: {e}\\")
            time.sleep(2)
        time.sleep(30)  # Increase as needed to keep the connection alive longer
    except Exception as error:
        print(f\\"Failed to connect to WebSocket: {error}\\")
    finally:
        client.close()


if __name__ == '__main__':
    main()"
`;

exports[`Example composer (end-to-end) registers outgoing processor when send op present (postman, appendClientSuffix) 1`] = `
"import time
from client import PostmanEchoWebSocketClientClient

def custom_error_handler(error):
    print(f\\"WebSocket error: {error}\\")

def outgoing_message_processor(message):
    \\"\\"\\"Process outgoing messages before they are sent (e.g., wrap with metadata).\\"\\"\\"
    print(f\\"Outgoing processor fired: {message}\\")
    return {\\"payload\\": message, \\"timestamp\\": \\"2025-01-01T00:00:00Z\\"}

def main():
    client = PostmanEchoWebSocketClientClient()
    client.register_error_handler(custom_error_handler)
    client.register_outgoing_processor(outgoing_message_processor)

    try:
        client.connect()
        for i in range(5):
            try:
                client.send_echo_message('test')
            except Exception as e:
                print(f\\"Error while sending send_echo_message: {e}\\")
            time.sleep(2)
    except Exception as error:
        print(f\\"Failed to connect to WebSocket: {error}\\")
    finally:
        client.close()


if __name__ == '__main__':
    main()"
`;

exports[`Example composer (end-to-end) renders full example.py for hoppscotch (send+receive) with default params 1`] = `
"import time
from client import HoppscotchEchoWebSocketClient

def handle_handle_time_stamp_message(message):
    print(f\\"[handleTimeStampMessage] Received message: {message}\\")

def custom_error_handler(error):
    print(f\\"WebSocket error: {error}\\")

def outgoing_message_processor(message):
    \\"\\"\\"Process outgoing messages before they are sent (e.g., wrap with metadata).\\"\\"\\"
    print(f\\"Outgoing processor fired: {message}\\")
    return {\\"payload\\": message, \\"timestamp\\": \\"2025-01-01T00:00:00Z\\"}

def main():
    client = HoppscotchEchoWebSocketClient()
    client.register_handle_time_stamp_message_handler(handle_handle_time_stamp_message)
    client.register_error_handler(custom_error_handler)
    client.register_outgoing_processor(outgoing_message_processor)

    try:
        client.connect()
        for i in range(5):
            try:
                client.send_echo_message('test')
            except Exception as e:
                print(f\\"Error while sending send_echo_message: {e}\\")
            time.sleep(2)
        time.sleep(30)  # Increase as needed to keep the connection alive longer
    except Exception as error:
        print(f\\"Failed to connect to WebSocket: {error}\\")
    finally:
        client.close()


if __name__ == '__main__':
    main()"
`;

exports[`Example composer (end-to-end) renders receive-only example.py for slack (no send loop, with keep-alive) 1`] = `
"import time
from client import SlackWebsocketAPIClient

def handle_on_hello_message(message):
    print(f\\"[onHelloMessage] Received message: {message}\\")

def handle_on_event(message):
    print(f\\"[onEvent] Received message: {message}\\")

def handle_on_disconnect_message(message):
    print(f\\"[onDisconnectMessage] Received message: {message}\\")

def custom_error_handler(error):
    print(f\\"WebSocket error: {error}\\")

def main():
    client = SlackWebsocketAPIClient()
    client.register_on_hello_message_handler(handle_on_hello_message)
    client.register_on_event_handler(handle_on_event)
    client.register_on_disconnect_message_handler(handle_on_disconnect_message)
    client.register_error_handler(custom_error_handler)

    try:
        client.connect()
        time.sleep(30)  # Increase as needed to keep the connection alive longer
    except Exception as error:
        print(f\\"Failed to connect to WebSocket: {error}\\")
    finally:
        client.close()


if __name__ == '__main__':
    main()"
`;
